--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,6 +14,7 @@
     "tutorials": "Tutorials",
     "community": "Community",
     "work with us": "Work With Us",
-    "donate": "Donate"
+    "donate": "Donate",
+    "vision": "Vision"
   }
 }
