--- a/i18n/hi.json
+++ b/i18n/hi.json
@@ -1,5 +1,83 @@
 {
   "home": {
     "title": "नमस्ते दुनिया!"
+  },
+  "hero": {
+    "slogan": "कोड जो दिमाग को आकार देता है, सिर्फ मशीनों को नहीं।",
+    "description": "Oracode एक ऑफलाइन-प्राथमिक शैक्षिक मोबाइल ऐप है जिसे वंचित बच्चों को कोडिंग, सिस्टम और नैतिकता की मूल बातें सिखाने के लिए डिज़ाइन किया गया है — वह भी कई भाषाओं में।"
+  },
+  "mission": {
+    "title": "कोडर्स की अगली पीढ़ी को सशक्त बनाना",
+    "description": "Oracode में, हमारा मानना है कि कोडिंग सिर्फ कंप्यूटर को निर्देश देना नहीं है। यह तार्किक सोच, रचनात्मकता और समस्या-समाधान कौशल को विकसित करने के बारे में है जो युवा दिमाग को भविष्य के लिए तैयार करते हैं।",
+    "t1": "सीखो। कोड करो। बनाओ।",
+    "d2": "हजारों युवा कोडर्स के साथ डिजिटल साक्षरता की यात्रा में शामिल हों"
+  },
+  "testimonial": {
+    "title": "हमारे छात्र क्या कहते हैं",
+    "description": "उन युवा कोडर्स से सुनें जो पहले ही Oracode के साथ अद्भुत चीजें बना रहे हैं।"
+  },
+  "header": {
+    "tutorials": "ट्यूटोरियल्स",
+    "community": "समुदाय",
+    "work with us": "हमारे साथ काम करें",
+    "donate": "दान करें",
+    "vision": "दृष्टिकोण",
+    "download": "डाउनलोड"
+  },
+  "footer": {
+    "brand": {
+      "title": "Oracode",
+      "description": "इंटरएक्टिव लर्निंग, सामुदायिक समर्थन, और व्यावहारिक प्रोजेक्ट्स के माध्यम से अगली पीढ़ी के कोडर्स को सशक्त बनाना। ऐसा कोड जो दिमाग को आकार देता है, सिर्फ मशीनों को नहीं।"
+    },
+    "contact": {
+      "email": "hello@oracode.com",
+      "phone": "1212121212121",
+      "location": "वैश्विक • रिमोट प्रथम"
+    },
+    "social": {
+      "facebook": "फेसबुक",
+      "twitter": "ट्विटर",
+      "instagram": "इंस्टाग्राम",
+      "youtube": "यूट्यूब",
+      "github": "गिटहब"
+    },
+    "sections": {
+      "quickLinks": "त्वरित लिंक",
+      "community": "समुदाय",
+      "aboutLegal": "हमारे बारे में और कानूनी जानकारी",
+      "legal": "कानूनी"
+    },
+    "links": {
+      "quick": {
+        "home": "होम",
+        "tutorials": "ट्यूटोरियल्स",
+        "community": "समुदाय",
+        "projects": "प्रोजेक्ट्स"
+      },
+      "community": {
+        "leaderboard": "लीडरबोर्ड",
+        "forums": "फोरम",
+        "student": "छात्र प्रोजेक्ट्स",
+        "shoutouts": "सराहनाएं"
+      },
+      "about": {
+        "vision": "हमारा दृष्टिकोण",
+        "work": "हमारे साथ काम करें",
+        "contact": "संपर्क करें",
+        "donate": "दान करें"
+      },
+      "legal": {
+        "privacy": "गोपनीयता नीति",
+        "terms": "सेवा की शर्तें",
+        "license": "लाइसेंस",
+        "conduct": "आचार संहिता"
+      }
+    },
+    "bottom": {
+      "copyright": "© 2025 Oracode। सर्वाधिकार सुरक्षित। ❤️ के साथ दुनिया भर के युवा कोडर्स के लिए बनाया गया।",
+      "openSource": "ओपन सोर्स",
+      "license": "MIT लाइसेंस",
+      "tech": "तकनीकी स्टैक बाद में अपडेट किया जाएगा"
+    }
   }
 }
